<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nikol.five5funf.MainActivity">

    <TextView
        android:id="@+id/zdrav"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginTop="48dp"
        android:text="@string/zdrav"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/iznen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zdrav"
        android:layout_marginTop="21dp"
        android:text="@string/iznen"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/resis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_below="@+id/iznen"
        android:layout_marginTop="23dp"
        android:text="@string/resis"
        android:textAlignment="center"
        android:textSize="16sp" />



    <TextView
        android:id="@+id/pritis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5x5"
        android:layout_centerHorizontal="true"
        android:text="@string/dugme2"
        android:textAlignment="center"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button5x5"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="40dp"
        android:lineSpacingExtra="10sp"
        android:text="DUGME"
        android:textSize="30sp"
        android:layout_below="@+id/dugme"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/dugme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/resis"
        android:layout_below="@+id/resis"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="60dp"
        android:text="@string/dugme"
        android:textAlignment="center"
        android:textSize="14sp" />

</RelativeLayout>
